# AudioFilter

./: .gitignore  CMakeLists.txt  LICENSE  TEMP_CODE_DO_NOT_DELETE.txt
include/: application.h  audio_buffer.h  audio_stream.h  pa_callbacks.h  pa_utils.h  record_stream.hpp
include/portaudio_utils/: pa_callbacks.h  pa_defines.h  pa_utils.h
include/sfml_utils/: item.hpp  item_list.hpp  mouse_events.hpp  states.hpp
src/: application.cpp  audio_buffer.cpp  audio_stream.cpp  main.cpp  pa_callbacks.cpp  pa_utils.cpp  record_stream.cpp
src/portaudio_utils/: pa_callbacks.cpp  pa_utils.cpp
src/sfml_utils/: item.cpp  item_list.cpp  states.cpp
